Fixed styling of featured customers block on mobile devices.

--- a/metabrainz/static/css/styles.less
+++ b/metabrainz/static/css/styles.less
@@ -122,6 +122,7 @@ img.pull-right { padding-left: 15px; }
     height: @featured-org-height;
     line-height: @featured-org-height;
     text-align: center;
+    @media (max-width: @screen-xs-max) { margin-top: 10px; }
     > span {
       display: inline-block;
       vertical-align: middle;
